{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 37,
  "lineage": "0983f730-71bb-8638-2fdd-3576c84f04f4",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:loadbalancer/app/steven-alb/c8221da9421a7d57",
            "arn_suffix": "app/steven-alb/c8221da9421a7d57",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "steven-alb-357000242.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:loadbalancer/app/steven-alb/c8221da9421a7d57",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "steven-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a0de19cff4ec3649"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-085438c8f582a3ee6"
              },
              {
                "subnet_id": "subnet-0a00cb6bd49a77e68"
              }
            ],
            "subnets": [
              "subnet-085438c8f582a3ee6",
              "subnet-0a00cb6bd49a77e68"
            ],
            "tags_all": {
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc_id": "vpc-050fa6a3f601bf2fe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.security_group.aws_security_group.alb_sg",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:listener/app/steven-alb/c8221da9421a7d57/2b6cd03991685db4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:targetgroup/steven-alb-tg/846d14fca17be64d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:listener/app/steven-alb/c8221da9421a7d57/2b6cd03991685db4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:loadbalancer/app/steven-alb/c8221da9421a7d57",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.alb_target_group",
            "module.security_group.aws_security_group.alb_sg",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:targetgroup/steven-alb-tg/846d14fca17be64d",
            "arn_suffix": "targetgroup/steven-alb-tg/846d14fca17be64d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:targetgroup/steven-alb-tg/846d14fca17be64d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "steven-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:targetgroup/steven-alb-tg/846d14fca17be64d-20240103095019733200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:024415233264:targetgroup/steven-alb-tg/846d14fca17be64d",
            "target_id": "i-0ff3fb1a7ca81e7ed"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.alb_target_group",
            "module.ec2.data.aws_instances.all_instances"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02453f5468b897e31",
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:instance/i-09e4aad30cc55e381",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e4aad30cc55e381",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "steven-tf-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a6cf7cd7c031cd8",
            "private_dns": "ip-10-0-2-154.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.154",
            "public_dns": "ec2-13-250-23-83.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.23.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0403754e4ac9d7fd4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a00cb6bd49a77e68",
            "tags": {
              "Name": "steven-jump-host"
            },
            "tags_all": {
              "Name": "steven-jump-host",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c793d26038e41815"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.bastion_sg",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:security-group/sg-0a0de19cff4ec3649",
            "description": "sg for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to instances on the instance listener port",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0de19cff4ec3649",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all inbound traffic on the load balancer listener port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "steven-sg-alb",
            "name_prefix": "",
            "owner_id": "024415233264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "steven-sg-web"
            },
            "tags_all": {
              "Name": "steven-sg-web",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "timeouts": null,
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:security-group/sg-0c793d26038e41815",
            "description": "sg for bastion server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c793d26038e41815",
            "ingress": [
              {
                "cidr_blocks": [
                  "112.210.234.130/32"
                ],
                "description": "allow ssh on local machine without company vpn",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "114.108.241.26/32"
                ],
                "description": "allow ssh on local machine with company vpn",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "61.245.9.122/32"
                ],
                "description": "office ip with vpn",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "steven-sg-bastion",
            "name_prefix": "",
            "owner_id": "024415233264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "steven-sg-bastion"
            },
            "tags_all": {
              "Name": "steven-sg-bastion",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "timeouts": null,
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:security-group/sg-0471a7b6936d19d7c",
            "description": "sg for rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0471a7b6936d19d7c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04b024242af86172f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "steven-sg-rds",
            "name_prefix": "",
            "owner_id": "024415233264",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "timeouts": null,
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.alb_sg",
            "module.security_group.aws_security_group.bastion_sg",
            "module.security_group.aws_security_group.web_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:security-group/sg-04b024242af86172f",
            "description": "sg for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b024242af86172f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c793d26038e41815"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "comms between load balancer and instances",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a0de19cff4ec3649"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "enable ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-0c793d26038e41815"
                ],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "steven-sg-web",
            "name_prefix": "",
            "owner_id": "024415233264",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "steven-sg-web"
            },
            "tags_all": {
              "Name": "steven-sg-web",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "timeouts": null,
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.alb_sg",
            "module.security_group.aws_security_group.bastion_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:subnet/subnet-06e415bce3327170b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e415bce3327170b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024415233264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steven-subnet-private-1"
            },
            "tags_all": {
              "Name": "steven-subnet-private-1",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:subnet/subnet-00d49272ca1454cdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d49272ca1454cdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024415233264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steven-subnet-private-2"
            },
            "tags_all": {
              "Name": "steven-subnet-private-2",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:subnet/subnet-085438c8f582a3ee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085438c8f582a3ee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024415233264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steven-subnet-public-1"
            },
            "tags_all": {
              "Name": "steven-subnet-public-1",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:subnet/subnet-0a00cb6bd49a77e68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a00cb6bd49a77e68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024415233264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steven-subnet-public-2"
            },
            "tags_all": {
              "Name": "steven-subnet-public-2",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:subnet/subnet-05ab17f51616e6514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ab17f51616e6514",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024415233264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steven-subnet-rds-1"
            },
            "tags_all": {
              "Name": "steven-subnet-rds-1",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:subnet/subnet-060cd91236438336b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060cd91236438336b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024415233264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steven-subnet-rds-2"
            },
            "tags_all": {
              "Name": "steven-subnet-rds-2",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d513df5756884a2b",
            "association_id": "eipassoc-071fe66b98d83a852",
            "domain": "vpc",
            "id": "eipalloc-0d513df5756884a2b",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d124b3295ebb0de4",
            "private_dns": "ip-10-0-1-177.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-13-251-189-14.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.189.14",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:internet-gateway/igw-0f38de10928a09ff5",
            "id": "igw-0f38de10928a09ff5",
            "owner_id": "024415233264",
            "tags": {
              "Name": "steven-igw"
            },
            "tags_all": {
              "Name": "steven-igw",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d513df5756884a2b",
            "association_id": "eipassoc-071fe66b98d83a852",
            "connectivity_type": "public",
            "id": "nat-0b1430a73e57c8696",
            "network_interface_id": "eni-0d124b3295ebb0de4",
            "private_ip": "10.0.1.177",
            "public_ip": "13.251.189.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-085438c8f582a3ee6",
            "tags": {
              "Name": "steven-ngw"
            },
            "tags_all": {
              "Name": "steven-ngw",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            }
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:route-table/rtb-0853c384c5afdedce",
            "id": "rtb-0853c384c5afdedce",
            "owner_id": "024415233264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f38de10928a09ff5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "steven-route-table-igw"
            },
            "tags_all": {
              "Name": "steven-route-table-igw",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "timeouts": null,
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:route-table/rtb-037f7028fd68aa457",
            "id": "rtb-037f7028fd68aa457",
            "owner_id": "024415233264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b1430a73e57c8696",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "steven-route-table-ngw"
            },
            "tags_all": {
              "Name": "steven-route-table-ngw",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            },
            "timeouts": null,
            "vpc_id": "vpc-050fa6a3f601bf2fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dc4fb4da1cadfd1",
            "route_table_id": "rtb-0853c384c5afdedce",
            "subnet_id": "subnet-085438c8f582a3ee6"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c49274bb306afc5",
            "route_table_id": "rtb-0853c384c5afdedce",
            "subnet_id": "subnet-0a00cb6bd49a77e68"
          },
          "dependencies": [
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table_igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfe34b6478441525",
            "route_table_id": "rtb-037f7028fd68aa457",
            "subnet_id": "subnet-06e415bce3327170b"
          },
          "dependencies": [
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.route_table_ngw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059d02e6bef2b0f2c",
            "route_table_id": "rtb-037f7028fd68aa457",
            "subnet_id": "subnet-00d49272ca1454cdd"
          },
          "dependencies": [
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.route_table_ngw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024415233264:vpc/vpc-050fa6a3f601bf2fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-025f5387b1215bca1",
            "default_route_table_id": "rtb-031c25829a01dd595",
            "default_security_group_id": "sg-0381e9f218d5e6583",
            "dhcp_options_id": "dopt-07864f098cfe81ff5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-050fa6a3f601bf2fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031c25829a01dd595",
            "owner_id": "024415233264",
            "tags": {
              "Name": "steven-vpc"
            },
            "tags_all": {
              "Name": "steven-vpc",
              "Project": "cloudbootcamp",
              "ProjectCode": "cross-skilling"
            }
          }
        }
      ]
    }
  ]
}